--- a/styleDarkTheme.css
+++ b/styleDarkTheme.css
@@ -14,6 +14,7 @@ h1.dark{
 }
 nav-bar.dark{
   color: var(--gamma);
+  background: none;
 }
 nav-bar.dark button{
   color: var(--gamma);
@@ -41,4 +42,7 @@ tag-lab{
   .dark.side-wrapper{
     background-color: #04051dec;
   }
+}
+.drop-shadow.dark{
+  filter: drop-shadow(0 0 1em black);
 }
